--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8"/>
+    <meta name='viewport' content='width=device-width, initial-scale=1'/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Sue Gosney online portfolio"/>
+    <meta property="og:description" content="I use a variety of media and, as well as landscape, I paint still life, buildings and flowers. I have also always enjoyed figure drawing and believe it is very important to continue with this discipline."/>
+    <meta property="og:url" content="https://www.suegosney.com/"/>
+    <meta property="og:image" content="https://suegosney-development.s3.amazonaws.com/uploads/painting/image/8/large_p17.jpg"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+
+
     <title>Sue Gosney</title>
       <%= favicon_link_tag 'favicon.png' %>
     <%= csrf_meta_tags %>
