--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <section class="min-height section-padding">
   <div class="about fadein">
-    <div class="about-image">
+    <div class="about-image flex-item">
       <%= image_tag "sue.jpg" %>
     </div>
 
