--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -317,3 +317,181 @@ section {
   width: 24px;
   margin-right: 7px;
 }
+
+@media (max-width: 1150px) {
+
+  .about {
+    align-items: flex-start;
+
+    .about-copy {
+      padding: 0 40px;
+    }
+  }
+}
+
+@media (max-width: 1030px) {
+
+  .section-padding {
+    padding-bottom: 60px;
+  }
+
+  .about {
+  .about-image {
+      width: 50%;
+    }
+
+    .about-copy {
+      width: 50%;
+    }
+  }
+}
+
+@media (max-width: 990px) {
+
+  h1 a {
+    margin-right: 30px;
+  }
+
+  header nav a {
+    margin-left: 0px;
+    margin-right: 30px;
+  }
+
+  .section-padding {
+    padding-bottom: 60px;
+  }
+
+  .about {
+    align-items: flex-start;
+
+    .about-image {
+      width: 40%;
+    }
+
+    .about-copy {
+      width: 60%;
+      padding:0 40px 0 0;
+    }
+  }
+
+  .flex-item {
+    order: 2;
+  }
+
+  .instapic {
+    width: 45%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+
+    img {
+      width:100%;
+    }
+  }
+}
+
+
+@media (max-width: 700px) {
+
+  .min-height {
+    min-height: 50vh;
+  }
+
+  $h2:32px;
+  $h3:24px;
+  $h4:18px;
+  $h5:16px;
+
+  h2 {
+    font-size: $h2;
+  }
+
+  h3 {
+    font-size: $h3;
+  }
+
+  h4 {
+    font-size: $h4;
+  }
+
+  h5 {
+    font-size: $h5;
+  }
+
+  .contact {
+    a {
+      font-size: $h2;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+
+  $h2:24px;
+  $h3:18px;
+  $h4:16px;
+
+  h2 {
+    font-size: $h2;
+  }
+
+  h3 {
+    font-size: $h3;
+  }
+
+  h4 {
+    font-size: $h4;
+  }
+
+  h5 {
+    font-size: $h5;
+  }
+
+  .section-padding {
+    padding-bottom: 40px;
+  }
+
+  header nav a {
+    font-size: $h4;
+  }
+
+  .contact {
+    a {
+      font-size: $h2;
+    }
+  }
+
+  .about {
+    flex-direction: column;
+    align-items: flex-start;
+
+    .about-image {
+      width: 100%;
+    }
+
+    .about-copy {
+      width: 100%;
+      padding: 40px 0 0 0;
+    }
+  }
+
+  .flex-item {
+    order: 0;
+  }
+
+  .exhibitions li,
+  .instagram {
+    margin-bottom: 80px;
+
+    h3 {
+      margin-bottom:20px;
+    }
+
+    h2 {
+      margin-bottom:20px;
+    }
+  }
+
+  .overlay .caption h6 {
+    display: none;
+  }
+}
