--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <section class="min-height section-padding">
   <div class="about fadein">
-    <div class="about-image flex-item">
+    <div class="about-image">
       <%= image_tag "sue.jpg" %>
     </div>
 
@@ -55,7 +55,9 @@
 
 <section>
   <div class="instagram fadein">
-    <h3>@gosney_art</h3>
+    <div class="link-underline">
+      <a href="https://www.instagram.com/gosneyart_/" target="_blank">@gosney_art</a>
+    </div>
     <div class="insta-container"  id="instafeed"></div>
   </div>
 </section>
