--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -52,7 +52,9 @@
 
 <section>
   <div class="instagram fadein">
-    <h3>@gosney_art</h3>
+    <div class="link-underline">
+      <a href="https://www.instagram.com/gosneyart_/" target="_blank">@gosney_art</a>
+    </div>
     <div class="insta-container"  id="instafeed"></div>
   </div>
 </section>
