--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -50,6 +50,27 @@
     </ul>
 </section>
 
+<section class="container">
+  <div class= "fadein">
+    <h3>Interested in knowing more about our exhibitions?</h4>
+    <p> Sign up to our Newsletter to hear more about current and upcoming exhibitions </p>
+  </div>
+
+    <div class="newsletter_form fadein">
+      <%= simple_form_for :newsletter, url: newsletter_path, remote: true do |f| %>
+      <%= f.input :first_name, label: false, placeholder: "First name*"%>
+      <%= f.input :last_name, label: false, placeholder: "Last name*"%>
+      <%= f.input :email, label: false, placeholder: "Email address*"%>
+
+      <%= f.button :submit,"Sign me up", class: "button_primary"  %>
+
+      <p class="smallprint"> *all fields required </p>
+
+      <% end %>
+    </div>
+
+</section>
+
 <section>
   <div class="instagram fadein">
     <div class="link-underline">
