--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,5 +3,24 @@
     <h3>Contact me</h3>
     <h2><%= mail_to "suegosney@btinternet.com" %></h2>
   </div>
+</section>
+
+<section class="newsletter_container">
+  <div class= "newsletter_copy fadein">
+    <h3>Sign up to receive more details about upcoming exhibitions</h3>
+  </div>
+
+    <div class="newsletter_form fadein">
+      <%= simple_form_for :newsletter, url: newsletter_path, remote: true do |f| %>
+      <%= f.input :first_name, label: false, placeholder: "First name*"%>
+      <%= f.input :last_name, label: false, placeholder: "Last name*"%>
+      <%= f.input :email, label: false, placeholder: "Email address*"%>
+
+    <%= f.button :submit,"Sign me up" %>
+
+      <p class="smallprint"> *all fields required </p>
+
+      <% end %>
+    </div>
 
 </section>
