--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,6 @@
 
 
     <div class="about-copy link-underline">
-        <p>Welcome to my website.</p>
 
       <p>Welcome to my website which includes several examples of my work, each with a description, size and a price.</p>
 
@@ -16,7 +15,7 @@
 
       <p>I use a variety of media and, as well as landscape, I paint still life, buildings and flowers. I have also always enjoyed figure drawing and believe it is very important to continue with this discipline.</p>
 
-      <p>I have been successfully painting and exhibiting for many years and some of my work may be seen at gallerie across the country.</p>
+      <p>I have been successfully painting and exhibiting for many years and some of my work may be seen at galleries across the country.</p>
 
       <p>I hope you enjoy my work.</p>
     </div>
@@ -28,6 +27,17 @@
     <ul class="exhibitions fadein">
       <li>
         <h3>
+          Upcoming exhibitions
+        </h3>
+        <h2>
+          Bucks Art Weeks, 9 - 24 June 2018
+        </h2>
+        <p>
+          Sunneyhill Barn, Brewhouse Lane, Rowsham, HP22 4QT
+        </p>
+      </li>
+      <li>
+        <h3>
           Current exhibitions
         </h3>
         <h2>
@@ -37,18 +47,6 @@
           The Barn Courtyard, 25 High St, Wendover, Aylesbury HP22 6DU
         </p>
 
-      </li>
-
-      <li>
-        <h3>
-          Upcoming exhibitions
-        </h3>
-        <h2>
-          Bucks Art Weeks, 9 - 24 June 2018
-        </h2>
-        <p>
-          Sunneyhill Barn, Brewhouse Lane, Rowsham, HP22 4QT
-        </p>
       </li>
     </ul>
 </section>
