--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -1,3 +1,22 @@
+<section>
+    <ul class="exhibitions fadein">
+
+      <li>
+        <h3>
+          Upcoming exhibitions
+        </h3>
+        <h2>
+          Bucks Art Weeks, 9 - 24 June 2018
+        </h2>
+        <p>
+          Sunneyhill Barn, Brewhouse Lane, Rowsham, HP22 4QT
+        </p>
+      </li>
+    </ul>
+</section>
+
+
+
 
 <section class="min-height">
 
@@ -34,18 +53,6 @@
           The Barn Courtyard, 25 High St, Wendover, Aylesbury HP22 6DU
         </p>
 
-      </li>
-
-      <li>
-        <h3>
-          Upcoming exhibitions
-        </h3>
-        <h2>
-          Bucks Art Weeks, 9 - 24 June 2018
-        </h2>
-        <p>
-          Sunneyhill Barn, Brewhouse Lane, Rowsham, HP22 4QT
-        </p>
       </li>
     </ul>
 </section>
