reduced margin for exhibitions

--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -1,5 +1,5 @@
 <section>
-    <ul class="exhibitions fadein">
+    <ul class="exhibitions fadein bos">
 
       <li>
         <h3>
@@ -14,8 +14,6 @@
       </li>
     </ul>
 </section>
-
-
 
 
 <section class="min-height">
