painting size changes

--- a/app/assets/stylesheets/paintings.scss
+++ b/app/assets/stylesheets/paintings.scss
@@ -42,6 +42,12 @@
   .painting-show-image {
     width:70%;
     text-align: center;
+
+    img {
+      max-width: 840px;
+      margin-left:auto;
+      margin-right:auto;
+    }
   }
 
   .painting-show-copy {
