twesked og:image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Sue Gosney online portfolio"/>
     <meta property="og:description" content="I use a variety of media and, as well as landscape, I paint still life, buildings and flowers. I have also always enjoyed figure drawing and believe it is very important to continue with this discipline."/>
     <meta property="og:url" content="https://www.suegosney.com/"/>
-    <meta property="og:image" content="https://suegosney-development.s3.amazonaws.com/uploads/painting/image/8/large_p17.jpg"/>
+    <meta property="og:image" content="https://suegosney.s3.amazonaws.com/uploads/painting/image/25/large_fishing-boat-aldeburgh-10.JPG"/>
     <meta name="twitter:card" content="summary_large_image"/>
 
 
