amended insta handle

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -74,7 +74,7 @@
 <section>
   <div class="instagram fadein">
     <div class="link-underline">
-      <a href="https://www.instagram.com/gosneyart_/" target="_blank">@gosney_art</a>
+      <a href="https://www.instagram.com/gosneyart_/" target="_blank">@gosneyart_</a>
     </div>
     <div class="insta-container"  id="instafeed"></div>
   </div>
