--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -20,7 +20,7 @@
 
     <% @paintings.each do |painting| %>
 
-      <div class="painting fadein">
+      <div class="painting fade">
 
         <%= link_to painting_path(painting) do %>
             <%= image_tag painting.image.medium %>
