--- a/app/assets/stylesheets/paintings.scss
+++ b/app/assets/stylesheets/paintings.scss
@@ -4,7 +4,6 @@
   align-items: center;
 
   .painting {
-    opacity: 1;
     transition: all 0.5s;
     max-width: 33.33%;
     padding-left: 60px;
@@ -23,10 +22,14 @@
   }
 }
 
-.in-viewport .fadein {
-  opacity: 1;
+.fade {
+  opacity: 0;
 }
 
+.visible {
+  opacity: 1;
+  transition: opacity 0.5s;
+}
 
 .painting:hover img {
   box-shadow: 0 12px 7px -7px rgba(0,0,0,.1);
